--- a/composer.json
+++ b/composer.json
@@ -6,7 +6,7 @@
     "type": "project",
     "require": {
         "php": ">=7.0.0",
-        "encore/laravel-admin": "1.5.*",
+        "encore/laravel-admin": "^1.5",
         "fideloper/proxy": "~3.3",
         "guzzlehttp/promises": "^1.3",
         "laravel/framework": "5.5.*",
